# UI-Related-DPs

./: README.md
MVC and HO DP/Example #1/: CMakeLists.txt
MVC and HO DP/Example #1/include/: controller.h  model.h  view.h
MVC and HO DP/Example #1/src/: controller.cpp  main.cpp  model.cpp  view.cpp
MVC and HO DP/Example #1/tests/: CMakeLists.txt  test_controller.cpp  test_model.cpp
MVP and HO DP/: CMakeLists.txt
MVP and HO DP/include/: model.h  presenter.h  view.h
MVP and HO DP/src/: main.cpp  model.cpp  presenter.cpp  view.cpp
MVP and HO DP/tests/: test_model.cpp  test_presenter.cpp
MVVM and HO DP/src/: Launcher.java  Main.java  User.java  UserViewController.java  UserViewModel.java
MVVM and HO DP/tests/: MVVMTest.java  UserTest.java  UserViewModelTest.java
src/main/java/org/example/mvvm_example/: User.java
